[package]
name = "moneytime"
version = "0.1.0"
authors = ["David Barsky <me@davidbarsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
tower = "0.3.1"
tracing = { git = "https://github.com/tokio-rs/tracing", branch = "davidbarsky/add-instrument-trait-to-tracing" }
tracing-subscriber = "0.2.8"
tokio = { version = "0.2", features = ["full"] }
color-eyre = "0.5.0"
eyre = "0.6.0"
http = "0.2.1"

[patch.crates-io]
tracing-core = { git = "https://github.com/tokio-rs/tracing", branch = "davidbarsky/add-instrument-trait-to-tracing" }